Fix an issue with the overlapping book fields on smaller screens

--- a/css/lw-omega.styles.css
+++ b/css/lw-omega.styles.css
@@ -442,15 +442,19 @@ body {
   color: black;
 }
 
+.view-nodequeue-1 .panel-2col-stacked .center-wrapper {
+  display: flex;
+  flex-flow: row wrap;
+}
 .view-nodequeue-1 .panel-2col-stacked .center-wrapper .panel-col-first {
-  width: 30%;
+  flex: 1 1 220px;
   margin-left: 3%;
 }
 .view-nodequeue-1 .panel-2col-stacked .center-wrapper .panel-col-first .inside {
   margin: 0 .5em 1em 0;
 }
 .view-nodequeue-1 .panel-2col-stacked .center-wrapper div.panel-col-last {
-  width: 65%;
+  flex: 1 1 65%;
 }
 .view-nodequeue-1 .panel-2col-stacked .center-wrapper div.panel-col-last .inside {
   margin: 0 0 1em .5em;
